Add prototype of auth middleware
Implement auth middleware

Apply auth middleware to other controller
